# OOP_2019

02_tdd/: CMakeLists.txt  readme.md
02_tdd/include/: Dummy.h  TextWrapper.h
02_tdd/src/: Dummy.cpp  TextWrapper.cpp  main.cpp
02_tdd/test/: CMakeLists.txt
02_tdd/test/src/: DummyTest.cpp  TextWrapperTest.cpp
04_associative_containers/: CMakeLists.txt  readme.md
04_associative_containers/include/: Dummy.h
04_associative_containers/src/: Dummy.cpp  main.cpp
04_associative_containers/test/: CMakeLists.txt
04_associative_containers/test/src/: CollectionsTest.cpp  DummyTest.cpp
05_stl_benchmark/: .gitignore  CMakeLists.txt  readme.md
05_stl_benchmark/bench/: CMakeLists.txt
05_stl_benchmark/bench/src/: ExampleBench.cpp  LargeBench.cpp  MediumBench.cpp  PauseAndResumeBench.cpp  SmallBench.cpp
05_stl_benchmark/include/: Large.h  Medium.h  Small.h
05_stl_benchmark/src/: main.cpp
05_stl_benchmark/test/: CMakeLists.txt
05_stl_benchmark/test/src/: LargeTest.cpp  MediumTest.cpp  SmallTest.cpp
06_observer_pattern/: CMakeLists.txt  readme.md
06_observer_pattern/bench/: CMakeLists.txt
06_observer_pattern/bench/src/: DummyBench.cpp
06_observer_pattern/include/: Acceleration.h  Displacement.h  Dummy.h  Observable.h  Observer.h  Speed.h
06_observer_pattern/src/: Acceleration.cpp  Displacement.cpp  Observable.cpp  Observer.cpp  Speed.cpp  main.cpp
06_observer_pattern/test/: CMakeLists.txt
06_observer_pattern/uml/: CMakeLists.txt  diagram.puml
07_abstract_factory_pattern/: .gitignore  CMakeLists.txt  readme.md
07_abstract_factory_pattern/bench/: CMakeLists.txt
07_abstract_factory_pattern/include/: ButtonGnomeWidget.h  ButtonKdeWidget.h  CheckBoxGnomeWidget.h  CheckBoxKdeWidget.h  Demo.h  GnomeWidgetFactory.h  KdeWidgetFactory.h  ListGnomeWidget.h  ListKdeWidget.h  Widget.h  WidgetFactory.h
07_abstract_factory_pattern/src/: ButtonGnomeWidget.cpp  ButtonKdeWidget.cpp  CheckBoxGnomeWidget.cpp  CheckBoxKdeWidget.cpp  Demo.cpp  Dummy.cpp  GnomeWidgetFactory.cpp  KdeWidgetFactory.cpp  ListGnomeWidget.cpp  ListKdeWidget.cpp  main.cpp
07_abstract_factory_pattern/test/: CMakeLists.txt
07_abstract_factory_pattern/test/src/: DummyTest.cpp
07_abstract_factory_pattern/uml/: CMakeLists.txt  class.puml
08_fake_mock_or_stub/: CMakeLists.txt
08_fake_mock_or_stub/include/: Observer.h  ObserverImpl.h  Space.h  SpaceImpl.h  Time.h  TimeImpl.h
08_fake_mock_or_stub/src/: SpaceImpl.cpp
08_fake_mock_or_stub/test/: CMakeLists.txt
08_fake_mock_or_stub/test/include/: ObserverMock.h  SpaceMock.h  TimeMock.h
08_fake_mock_or_stub/test/src/: UniverseTest.cpp
08_fake_mock_or_stub/uml/: CMakeLists.txt  class.puml
09_simple_gui/: acceleration.cpp  acceleration.h  mainwindow.cpp  mainwindow.h  speed.cpp  speed.h
10_state_machine/: 10_state_machine.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
10_state_machine/uml/: state.puml
12_qt_testing/: 12_qt_testing.pro
12_qt_testing/tests/: tests.pro
12_qt_testing/tests/test_demo/: test_demo.pro  tst_demo_test.cpp
12_qt_testing/utils/: demo.cpp  demo.h  utils.pro
13_qt_tcp/: 13_qt_tcp.pro  server.h
13_tcp_server_client/: 13_tcp_client_server.pro  connection.cpp  connection.h  main.cpp  server.cpp  server.h
QtQuickDemo/: QtQuickDemo.pro  acceleration.cpp  acceleration.h  demo.cpp  demo.h  displacement.cpp  displacement.h  main.cpp  main.qml  speed.cpp  speed.h
build-10_state_machine-Desktop-Debug/: 10_state_machine  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-QtQuickDemo-Desktop-Debug/: Makefile  QtQuickDemo  moc_acceleration.cpp  moc_demo.cpp  moc_displacement.cpp  moc_speed.cpp  qrc_qml.cpp
simple_gui/: acceleration.cpp  acceleration.h  displacement.cpp  displacement.h  mainwindow.cpp  mainwindow.ui  simple_gui.pro  speed.cpp  speed.h
