set(BENCH_HEADERS include/BenchIncludes.h)
set(BENCH_SOURCES src/DummyBench.cpp)

add_executable(07_abstract_factory_pattern_bench ${BENCH_HEADERS} ${BENCH_SOURCES})
target_include_directories(07_abstract_factory_pattern_bench PUBLIC include)
target_link_libraries(07_abstract_factory_pattern_bench 07_abstract_factory_pattern_lib benchmark benchmark_main pthread)
